updated some animation
banner image now has fade in.
fixed on mobile everything is side to side
moved some css, every ccard loads one by one. still looking for a way to do that better

--- a/about.html
+++ b/about.html
@@ -40,22 +40,22 @@
     </div>
 
     
-   <div class="container mt-2" >
+   <div class="container mt-2">
       <div class=row>
 
-         <div class="col-sm-4 ccard">
+         <div class="col-sm-4 ccard ap3s">
             <h2>What I do</h2>
             <p class=p>Networking</p>
             <p class=p>bootstrap?</p>
             <p>Website? I suck</p>
          </div>
 
-         <div class="col-sm-4 ccard">
+         <div class="col-sm-4 ccard ap5s">
             <h2>Certification</h2>
             <p><a target="_blank" rel="noopener noreferrer" href=https://cp.certmetrics.com/cisco/en/public/verify/credential/1a03977f1ad54ae290070e93f483824f>CCNA 200-301</a></p>
          </div>
 
-         <div class="col-sm-4 ccard">
+         <div class="col-sm-4 ccard ap7s">
             <h2>Socials</h2>
             <p class=p><a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/cch-karl/"> <i class="fa-brands fa-linkedin"></i> Linked-in: Chan Chun Hang Karl</a></p>
             <p class=p><a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/little.karl_/"><i class="fa-brands fa-instagram"></i> Instagram: little.karl_</a></p>
@@ -69,7 +69,7 @@
 
    <div class="container mt-2">
       <div class="row">
-         <div class="col-sm-8 ccard">
+         <div class="col-sm-8 ccard ap9s">
             <h2>Who am I</h2>
             <p>I am a vtc student studying IT.</p>
             <p class="p">So far my achievements are as follows:</p>
@@ -77,7 +77,7 @@
             <div id="listdiv" style="display:none"></div>
             <p>as of 180420230612</p>
          </div>
-         <div class="col-sm-4 ccard">
+         <div class="col-sm-4 ccard ap11s">
             <h2>Contacts</h2>
             <p><a target="_blank" rel="noopener noreferrer" href=mailto:karl@ltek.me><i class="fa-regular fa-envelope"></i> karl@ltek.me</a></p>
          </div>
@@ -86,7 +86,7 @@
 
    <div class="container">
       <div class="row">
-         <div class="col-sm-12 ccard">
+         <div class="col-sm-12 ccard ap13s">
             <h2>What chat gpt has to say about me</h2>
             <p style="padding: 0 10px;">
                You like spending time online, especially watching YouTube and working on your website. You enjoy being alone and find it a good way to relax and reflect on things. You're open to new ideas and perspectives, but sometimes you can feel a bit insecure when someone disagrees with you. When it comes to relationships, you're still trying to figure out what you want. You're a thoughtful and introspective person who enjoys exploring ideas and the digital world. It might be helpful for you to focus on developing your interests and values and connecting with others who share similar interests and values.
