--- a/index.html
+++ b/index.html
@@ -32,29 +32,27 @@
     </div>
   </nav>
   <div class="banner p-5">
-
       <h1>Hello~</h1>
       <p>Reality sucks, but it's what we have</p>
-
   </div>
   
   <div class="container mt-2">
     <div class="row">
   
-      <div class="col-sm-4 ccard">
+      <div class="col-sm-4 ccard ap3s">
         <h3>What is this</h3>
         <p class="p">just a website.</p>
         <p class="p">A place for me to try out different things</p>
   
       </div>
   
-      <div class="col-sm-5 ccard">
+      <div class="col-sm-5 ccard ap5s">
         <h3>How is this site hosted</h3>
         <p class="p">AWS lightsnail</p>
         <p class="p">the cheapest option avalable +$1 bucket for website update</p>
       </div>
   
-      <div class="col-sm-3 ccard">
+      <div class="col-sm-3 ccard ap7s">
         <h3>docs?</h3>
         <p class="p">soon™</p>
         <p class="p"></p>
@@ -65,7 +63,7 @@
   
   <div class="container">
     <div class="row">
-      <div class="ccard">
+      <div class="ccard ap5s">
         <h1>First rebuild</h1>
         <p class="p">After fighting for a long time with apache2, ubuntu, php, mysql. </p>
         <p class="p">I finally decided to learn amazon linux and nginx.</p>
