fixed a few things

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   
   <div class="container">
     <div class="row">
-      <div class="ccard ap5s">
+      <div class="ccard" style="animation-delay: .4s">
         <h1>First rebuild</h1>
         <p class="p">After fighting for a long time with apache2, ubuntu, php, mysql. </p>
         <p class="p">I finally decided to learn amazon linux and nginx.</p>
