mobile and web "optmization"
added animation sequence modification when small screen detected

fixed banner background side in instead of fade in when using mobile size

moved some css around

added a noscript notification to the bottom

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="https://kit.fontawesome.com/c26343c65f.js" crossorigin="anonymous"></script>
   <link href="/src/main.css" rel="stylesheet">
   <script src="/src/main.js"></script>
 </head>
@@ -63,7 +64,7 @@
   
   <div class="container">
     <div class="row">
-      <div class="ccard" style="animation-delay: .4s">
+      <div id="home_b1" class="ccard">
         <h1>First rebuild</h1>
         <p class="p">After fighting for a long time with apache2, ubuntu, php, mysql. </p>
         <p class="p">I finally decided to learn amazon linux and nginx.</p>
@@ -72,6 +73,8 @@
       </div>
     </div>
   </div>
+  
+  <noscript><div class="nosbox"><p>Please enable JavaScript to experience the full functionality of this website. Some features and effects may be disabled without JavaScript.</p></div></noscript>
 
 </body>
 </html>
