--- a/sitefunc.html
+++ b/sitefunc.html
@@ -13,6 +13,7 @@
     if (navigator.userAgent.match(
       /(phone|pad|pod|iPhone|iPod|ios|iPad|Android|Mobile|BlackBerry|IEMobile|MQQBrowser|JUC|Fennec|wOSBrowser|BrowserNG|WebOS|Symbian|Windows Phone)/i
     )) {window.alert("You are on mobile, this write up is designed to be read on desktop");
+    window.alert("This page is still under construction. Changes are not finalized as of 26042023");
     }
     </script>
 </head>
