--- a/about.html
+++ b/about.html
@@ -10,8 +10,9 @@
       <script src="https://kit.fontawesome.com/c26343c65f.js" crossorigin="anonymous"></script>
       <link href="/src/main.css" rel="stylesheet">
       <script src="/src/main.js"></script>
-      
-    </head>
+      <script>
+      </script>
+   </head>
 
 <body>
 
@@ -39,7 +40,6 @@
       <p>and I have a monkey brain</p>
     </div>
 
-    
    <div class="container mt-2">
       <div class=row>
 
@@ -67,9 +67,9 @@
       </div>
    </div>
 
-   <div class="container mt-2">
+   <div class="container">
       <div class="row">
-         <div class="col-sm-8 ccard" style="animation-delay: .4s">
+         <div id="about_b1" style="background: transparent;" class="ccard">
             <h2>Who am I</h2>
             <p>I am a vtc student studying IT.</p>
             <p class="p">So far my achievements are as follows:</p>
@@ -77,7 +77,7 @@
             <div id="listdiv" style="display:none"></div>
             <p>as of 180420230612</p>
          </div>
-         <div class="col-sm-4 ccard" style="animation-delay: .8s">
+         <div id="about_b2" class="col-sm-4 ccard">
             <h2>Contacts</h2>
             <p><a target="_blank" rel="noopener noreferrer" href=mailto:karl@ltek.me><i class="fa-regular fa-envelope"></i> karl@ltek.me</a></p>
          </div>
@@ -86,7 +86,7 @@
 
    <div class="container">
       <div class="row">
-         <div class="col-sm-12 ccard" style="animation-delay: .9s">
+         <div id="about_b3" class="col-sm-12 ccard">
             <h2>What chat gpt has to say about me</h2>
             <p style="padding: 0 10px;">
                You like spending time online, especially watching YouTube and working on your website. You enjoy being alone and find it a good way to relax and reflect on things. You're open to new ideas and perspectives, but sometimes you can feel a bit insecure when someone disagrees with you. When it comes to relationships, you're still trying to figure out what you want. You're a thoughtful and introspective person who enjoys exploring ideas and the digital world. It might be helpful for you to focus on developing your interests and values and connecting with others who share similar interests and values.
@@ -95,5 +95,8 @@
          </div>
       </div>
    </div>
+
+   <noscript><div class="nosbox"><p>Please enable JavaScript to experience the full functionality of this website. Some features and effects may be disabled without JavaScript.</p></div></noscript>
+
 </body>
 </html>
